--- a/index.html
+++ b/index.html
@@ -393,6 +393,18 @@
             </ul>
           </div>
         </div>
+        <div class="div-footer">
+            <p class="subs-form">Subscribe</p>
+            <form class="form-footer" name="email_input">
+                <label class="label-form-footer">
+                <input class="form-input" type="email" name="subscribe" placeholder="E-mail"/>
+                </label>
+                <button class="form-button" type="submit">Subscribe
+                <svg class="icon-footer-form" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                </svg>
+                </button>
+            </form>
       </footer>
 <div class="backdrop is-open">
     <div class="modal">
