--- a/index.html
+++ b/index.html
@@ -405,7 +405,8 @@
                 </svg>
                 </button>
             </form>
-      </footer>
+        </div>
+    </footer>
 <div class="backdrop is-open">
     <div class="modal">
         <button class="popup-close">
@@ -414,7 +415,7 @@
             </svg>
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
-        <form class="forma" action="">
+        <form class="forma" action="#">
             <div>
                 <label for="username" class="popup-label">Name</label>
                 <div class="popup-input-wrapper">
@@ -446,7 +447,8 @@
                 <div>
                     <label for="usercomment">Comment</label>
                 </div>
-                <textarea class="popup-textarea" name=""form_user id="useromment" placeholder="Text input"></textarea>
+                <textarea class="popup-textarea" name="form_user" id="usercomment" placeholder="Text input">
+                </textarea>
             </div>
             <div class="checkbox-container">
                 <input type="checkbox" id="agreement" class="custom-checkbox-input">
