--- a/index.html
+++ b/index.html
@@ -417,12 +417,12 @@
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="forma" action="#">
             <div class="popup-form-all" style="margin-bottom: 16px;">
-              <label for="username" class="popup-label">Name</label>
+              <label for="user-name" class="popup-label">Name</label>
               <div class="popup-input-wrapper">
                 <input
                   type="text"
                   name="user-name"
-                  id="username"
+                  id="user-name"
                   class="popup-input"
                 />
                 <svg class="icon-form" width="18" height="24">
@@ -476,7 +476,7 @@
                 for="user-privacy"
                 type="checkbox"
                 id="user-privacy"
-                class="custom-checkbox-input"
+                class="custom-checkbox-input visually-hidden"
                 name="user-privacy"
                 value="true"
               />
