--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
     <!-- Форма -->
     <form class="modal-form">
       <!-- Name -->
-      <div class="form-group">
+      <div class="input-container">
         <label for="user-name" class="form-label">Name</label>
         <div class="input-wrapper">
           <input id="user-name" name="user-name" type="text" class="form-input" />
@@ -435,7 +435,7 @@
       </div>
 
       <!-- Phone -->
-      <div class="form-group">
+      <div class="input-container">
         <label for="user-phone" class="form-label">Phone</label>
         <div class="input-wrapper">
           <input id="user-phone" name="user-phone" type="text" class="form-input" />
@@ -446,7 +446,7 @@
       </div>
 
       <!-- Email -->
-      <div class="form-group">
+      <div class="input-container">
         <label for="user-email" class="form-label">Email</label>
         <div class="input-wrapper">
           <input id="user-email" name="user-email" type="text" class="form-input" />
@@ -463,7 +463,7 @@
       </div>
 
       <!-- Privacy -->
-      <div class="form-group">
+      <div class="checkbox-container">
         <input id="user-privacy" type="checkbox" name="user-privacy" value="true" class="checkbox-input visually-hidden" />
         <label for="user-privacy" class="checkbox-label">
           I accept the terms and conditions of the
@@ -481,7 +481,6 @@
     </form>
   </div>
 </div>
-
 </body>
 </html>
 
