--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         <input id="user-privacy" type="checkbox" name="user-privacy" value="true" class="checkbox-input visually-hidden" />
         <label for="user-privacy" class="checkbox-label">
           I accept the terms and conditions of the
-          <span class="checkbox-box">
+          <span class="checkbox-box" style="display:inline-flex;">
             <svg class="checkbox-icon" width="10" height="8">
               <use href="./images/sprite.svg#check"></use>
             </svg>
