--- a/index.html
+++ b/index.html
@@ -471,6 +471,7 @@
             <svg class="checkbox-icon" width="10" height="8">
               <use href="./images/sprite.svg#check"></use>
             </svg>
+          </span>
           <a href="#" class="privacy-policy">Privacy Policy</a>
         </label>
       </div>
