--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
           </div>
         </div>
       </footer>
-<!-- Контейнер модального вікна -->
+      <!-- Контейнер модального вікна -->
 <div class="modal-backdrop">
   <!-- Модальне вікно -->
   <div class="modal-window">
@@ -438,7 +438,7 @@
       <div class="input-container">
         <label for="user-phone" class="form-label">Phone</label>
         <div class="input-wrapper">
-          <input id="user-phone" name="user-phone" type="text" class="form-input" />
+          <input id="user-phone" name="user-phone" type="tel" class="form-input" />
           <svg class="input-icon" width="18" height="24">
             <use href="./images/sprite.svg#phone"></use>
           </svg>
@@ -449,7 +449,7 @@
       <div class="input-container">
         <label for="user-email" class="form-label">Email</label>
         <div class="input-wrapper">
-          <input id="user-email" name="user-email" type="text" class="form-input" />
+          <input id="user-email" name="user-email" type="email" class="form-input" />
           <svg class="input-icon" width="18" height="24">
             <use href="./images/sprite.svg#email"></use>
           </svg>
@@ -466,12 +466,12 @@
       <div class="checkbox-container">
         <input id="user-privacy" type="checkbox" name="user-privacy" value="true" class="checkbox-input visually-hidden" />
         <label for="user-privacy" class="checkbox-label">
-          I accept the terms and conditions of the
-          <span class="checkbox-box"></span>
+          <span class="checkbox-box">
             <svg class="checkbox-icon" width="10" height="8">
               <use href="./images/sprite.svg#check"></use>
             </svg>
           </span>
+          I accept the terms and conditions of the 
           <a href="#" class="privacy-policy">Privacy Policy</a>
         </label>
       </div>
@@ -481,6 +481,7 @@
     </form>
   </div>
 </div>
+
 </body>
 </html>
 
