--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
       <div class="checkbox-container">
         <input id="user-privacy" type="checkbox" name="user-privacy" value="true" class="checkbox-input visually-hidden" />
         <label for="user-privacy" class="checkbox-label">
-          <span class="checkbox-box">
+          <span class="checkbox-box" style="display:inline-flex; align-items:center; justify-content:center;">
             <svg class="checkbox-icon" width="10" height="8">
               <use href="./images/sprite.svg#check"></use>
             </svg>
