--- a/index.html
+++ b/index.html
@@ -463,22 +463,18 @@
       </div>
 
       <!-- Privacy -->
-      <div class="checkbox-container">
-        <input id="user-privacy" type="checkbox" class="checkbox-input visually-hidden">
-        <label for="user-privacy" class="checkbox-label">
-          <!-- Span для позиціонування галочки -->
-          <span class="checkbox-box">
-            <svg class="checkbox-icon" width="10" height="8">
-              <use href="./images/sprite.svg#check"></use>
-            </svg>
-          </span>
-          <!-- Текст окремо, щоб span був чистий -->
-          <span class="checkbox-text">
-            I accept the terms and conditions of the 
-            <a href="#" class="privacy-policy">Privacy Policy</a>
-          </span>
-        </label>
-      </div>
+      div class="checkbox-container">
+      <input id="user-privacy" type="checkbox" name="user-privacy" value="true" class="checkbox-input visually-hidden" />
+      <label for="user-privacy" class="checkbox-label">
+        <span class="checkbox-box" style="display:inline-flex; align-items:center; justify-content:center;">
+          <svg class="checkbox-icon" width="10" height="8">
+            <use href="./images/sprite.svg#check"></use>
+          </svg>
+        </span>
+        I accept the terms and conditions of the 
+        <a href="#" class="privacy-policy">Privacy Policy</a>
+      </label>
+    </div>
       
 
       <!-- Submit -->
