--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
       </div>
 
       <!-- Privacy -->
-      div class="checkbox-container">
+    <div class="checkbox-container">
       <input id="user-privacy" type="checkbox" name="user-privacy" value="true" class="checkbox-input visually-hidden" />
       <label for="user-privacy" class="checkbox-label">
         <span class="checkbox-box" style="display:inline-flex; align-items:center; justify-content:center;">
